добавляет htmlразметку портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokument</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -27,20 +30,73 @@
         <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
 <main>
-    <ul>
-        <li>
-            
-        </li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-
-    </ul>
+    <!--Портфолио-->
+    <h1>Портфолио</h1>
+    <!--Filters-->
+    <section>
+            <ul>
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+             </ul>     
+    </section>
+              <ul>
+             <li><a href="">
+                 <img src="./images/img1for2hw.jpg" alt="ноутбук с открытой страницей веб-сайта">
+                 <h2>Технокряк</h2>
+                 <p>Веб-сайт</p>
+                </a>
+             </li>
+             <li>
+                 <img src="./images/img2for2hw.jpg" alt="два ыутболиста с мячом">
+                 <h2>Постер <span lang="en"> New Orlean vs Golden Star</span></h2>
+                 <p>Дизайн</p>
+                </a>
+             </li>
+             <li>
+                 <img src="./images/img3for2hw.jpg" alt="логотип ресторана">
+                 <h2>Ресторан<span lang="en">Seafood</span></h2>
+                 <p>Приложение</p>
+                </a>
+             </li>
+             <li>
+                 <img src="./images/img4for2hw.jpg" alt="наушники">
+                 <h2>Проект<span lang="en">Prime</span></h2>
+                 <p>Маркетинг</p>
+                </a>
+             </li>
+             <li>
+                 <img src="./images/img5for2hw.jpg" alt="две коробки">
+                 <h2>Проект<span lang="en">Boxes</span></h2>
+                 <p>Приложение</p>
+                </a>
+             </li>
+             <li>
+                 <img src="./images/img6for2hw.jpg" alt="компьютер с открытой страницей веб-сайта">
+                 <h2><span lang="en">Inspiration has no Borders</span></h2>
+                 <p>Веб-сайт</p>
+                </a>
+             </li>
+             <li>
+                 <img src="./images/img7for2hw.jpg" alt="открытый журнал">
+                 <h2>Издание<span lang="en">Limited Edition</span></h2>
+                 <p>Дизайн</p>
+                </a>
+             </li>
+             <li>
+                 <img src="./images/img8for2hw.jpg" alt="бирка">
+                 <h2>Проект <span lang="en">LAB</span></h2>
+                 <p>Маркетинг</p>
+                </a>
+             </li>
+             <li><img src="./images/img9for2hw.jpg" alt="ноутбук с открытой страницей приложения">
+                 <h2><span lang="en">Growing Business</span></h2>
+                 <p>Приложение</p>
+                </a>
+             </li>
+          </ul>
 </main>
 
     <footer>
@@ -60,5 +116,6 @@
                     <a href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
+            
         </address>
     </footer>
