--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </a>
         
         <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
+            <li><a href="https://nataliamonasturska.github.io/goit-markup-hw-01/">Студия</a></li>
+            <li><a href="https://nataliamonasturska.github.io/-goit-markup-hw-02/portfolio.html">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
          </ul>
          </nav>
