--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
             </a>
 
             <ul>
-                <li><a href="https://nataliamonasturska.github.io/goit-markup-hw-01/">Студия</a></li>
-                <li><a href="https://nataliamonasturska.github.io/-goit-markup-hw-02/portfolio.html">Портфолио</a></li>
+                <li><a href="">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
