--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </a>
         
         <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="./portfolio.html">Портфолио</a></li>
+            <li><a href="/portfolio.html">Студия</a></li>
+            <li><a href="/index.html">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
          </ul>
          </nav>
