--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
             </a>
 
             <ul>
-                <li><a href="./portfolio.html">Студия</a></li>
-                <li><a href="./index.html">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
