--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
             <ul>
                 <li><a href="./index.html">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
