--- a/portfolio.html
+++ b/portfolio.html
@@ -8,114 +8,168 @@
     <title>Dokument</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
-        <!--Верхняя линия-->
-        <nav>
-            <a href="">
-                <img src="./images/logo.svg" alt="логотип">
-            </a>
+<header class="header">
+    <!--Верхняя линия-->
+    <nav class="header-navigation">
+        <a class="header-logo link" href=""><span class="header-web">Web</span><span
+                class="header-studio">Studio</span></a>
 
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </header>
+        <ul class="list header-list">
+            <li class="header-item">
+                <a class="link header-link" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+                <a class="link header-link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+                <a class="link header-link" href="">Контакты</a>
+            </li>
+        </ul>
+    </nav>
+    <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+</header>
 <main>
     <!--Портфолио-->
-    <h1>Портфолио</h1>
-    <!--Filters-->
-    <section>
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
-             </ul>     
-    </section>
-              <ul>
-             <li><a href="">
-                 <img src="./images/img1for2hw.jpg" alt="ноутбук с открытой страницей веб-сайта">
-                 <h2>Технокряк</h2>
-                 <p>Веб-сайт</p>
-                </a>
+        <section class="portfolio"></section>
+            <h1 class="visually-hidden">Портфолио</h1>
+            <div class="portfolio-battons">
+                <ul class="list portfolio-list">
+                   <li class="portfolio-item"><button class="portfolio-btn"  type="button">Все</button></li>
+                   <li class="portfolio-item"><button class="portfolio-btn"  type="button">Веб-сайты</button></li>
+                   <li class="portfolio-item"><button class="portfolio-btn"  type="button">Приложения</button></li>
+                   <li class="portfolio-item"><button class="portfolio-btn" type="button">Дизайн</button></li>
+                   <li class="portfolio-item"><button class="portfolio-btn" type="button">Маркетинг</button></li>
+                 </ul>  
+            </div>
+              <ul class="list portfolio-list">
+             <li class="portfolio-item">
+                 <a class="link" href="">
+                 <img 
+                     src="./images/img1for2hw.jpg" 
+                     alt="ноутбук с открытой страницей веб-сайта"
+                     Width=" 370px"
+                     Height="294px" 
+                    >
+                 <h2 class="portfolio-title">Технокряк</h2>
+                 <p class="portfolio-text">Веб-сайт</p></a>
              </li>
-             <li>
-                 <img src="./images/img2for2hw.jpg" alt="два ыутболиста с мячом">
-                 <h2>Постер <span lang="en"> New Orlean vs Golden Star</span></h2>
-                 <p>Дизайн</p>
-                </a>
+             <li class="portfolio-item">
+                 <a class="link"  href="">
+                 <img 
+                     src="./images/img2for2hw.jpg" 
+                     alt="два футболиста с мячом"
+                     Width="370px"
+                     Height="294px"
+                     >
+                <h2 class="portfolio-title">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
+                <p class="portfolio-text">Дизайн</p></a>
              </li>
-             <li>
-                 <img src="./images/img3for2hw.jpg" alt="логотип ресторана">
-                 <h2>Ресторан<span lang="en">Seafood</span></h2>
-                 <p>Приложение</p>
-                </a>
+             <li class="portfolio-item">
+                <a class="link" href="">
+                 <img 
+                     src="./images/img3for2hw.jpg" 
+                     alt="логотип ресторана"
+                     Width="370px"
+                     Height="294px"
+                     >
+                 <h2 class="portfolio-title">Ресторан<span lang="en">Seafood</span></h2>
+                 <p class="portfolio-text">Приложение</p></a>
              </li>
-             <li>
-                 <img src="./images/img4for2hw.jpg" alt="наушники">
-                 <h2>Проект<span lang="en">Prime</span></h2>
-                 <p>Маркетинг</p>
-                </a>
+             <li class="portfolio-item">
+                <a class="link" href="">
+                 <img 
+                    src="./images/img4for2hw.jpg" 
+                    alt="наушники"
+                    Width="370px"
+                    Height="294px"
+                    >
+                 <h2 class="portfolio-title">Проект<span lang="en">Prime</span></h2>
+                 <p class="portfolio-text">Маркетинг</p></a>
              </li>
-             <li>
-                 <img src="./images/img5for2hw.jpg" alt="две коробки">
-                 <h2>Проект<span lang="en">Boxes</span></h2>
-                 <p>Приложение</p>
-                </a>
+             <li class="portfolio-item">
+                 <a class="link" href="">
+                 <img 
+                     src="./images/img5for2hw.jpg"
+                     alt="две коробки"
+                     Width="370px"
+                     Height="294px"
+                     >
+                 <h2 class="portfolio-title">Проект<span lang="en">Boxes</span></h2>
+                 <p class="portfolio-text">Приложение</p></a>
              </li>
-             <li>
-                 <img src="./images/img6for2hw.jpg" alt="компьютер с открытой страницей веб-сайта">
-                 <h2><span lang="en">Inspiration has no Borders</span></h2>
-                 <p>Веб-сайт</p>
-                </a>
+             <li class="portfolio-item">
+                <a class="link" href="">
+                 <img 
+                     src="./images/img6for2hw.jpg" 
+                     alt="компьютер с открытой страницей веб-сайта"
+                     Width="370px"
+                     Height="294px"
+                     >
+                 <h2 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h2>
+                 <p class="portfolio-text">Веб-сайт</p></a>
              </li>
-             <li>
-                 <img src="./images/img7for2hw.jpg" alt="открытый журнал">
-                 <h2>Издание<span lang="en">Limited Edition</span></h2>
-                 <p>Дизайн</p>
-                </a>
+             <li class="portfolio-item">
+                <a class="link" href="">
+                 <img 
+                     src="./images/img7for2hw.jpg"
+                     alt="открытый журнал"
+                     Width="370px"
+                     Height="294px"
+                     >
+                 <h2 class="portfolio-title">Издание<span lang="en">Limited Edition</span></h2>
+                 <p class="portfolio-text">Дизайн</p></a>
              </li>
-             <li>
-                 <img src="./images/img8for2hw.jpg" alt="бирка">
-                 <h2>Проект <span lang="en">LAB</span></h2>
-                 <p>Маркетинг</p>
-                </a>
-             </li>
-             <li><img src="./images/img9for2hw.jpg" alt="ноутбук с открытой страницей приложения">
-                 <h2><span lang="en">Growing Business</span></h2>
-                 <p>Приложение</p>
-                </a>
+             <li class="portfolio-item">
+                <a class="link" href="">
+                 <img 
+                     src="./images/img8for2hw.jpg"
+                     alt="бирка"
+                     Width="370px"
+                     Height="294px"
+                     >
+                 <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
+                 <p class="portfolio-text">Маркетинг</p></a>
+             </li >
+             <li class="portfolio-item">
+                <a class="link" href="">
+                 <img 
+                     src="./images/img9for2hw.jpg" 
+                     alt="ноутбук с открытой страницей приложения"
+                     Width="370px"
+                     Height="294px"
+                     >
+                 <h2 class="portfolio-title"><span lang="en">Growing Business</span></h2>
+                 <p class="portfolio-text">Приложение</p></a>
              </li>
           </ul>
+        </section>
 </main>
 
-    <footer>
-        <a href="">
-            <img src="./images/logo.svg" alt="логотип">
-        </a>
-        <address>
-            <ul>
-                <li>
-                    <a href="https://goo.gl/maps/9Tbaq5ULYDooVJVK9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
-                        Леси Украинки, 26</a>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
-                </li>
-            </ul>
-            
-        </address>
-    </footer>
+<footer class="footer">
+    <a class="footer-logo link" href=""><span class="footer-web">Web</span><span class="footer-studio">Studio</span></a>
+    <address>
+        <ul class="footer-list list">
+            <li>
+                <a class="link footer-adress " href="https://goo.gl/maps/9Tbaq5ULYDooVJVK9" target="_blank"
+                    rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li>
+                <a class="link footer-mail" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li>
+                <a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+        </ul>
+    </address>
+</footer>
+</body>
+
+</html>
