--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
     <section class="peculiarities">
         <ul class="list peculiarities-list">
             <li class="item peculiarities-item ">
-                <h3 class="peculiaritie-title">Внимание к деталям</h3>
+                <h3 class="peculiaritie-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                 <p class="peculiaritie-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
            
             <li class="item peculiarities-item ">
-                <h3 class="peculiaritie-title">Пунктуальность</h3>
+                <h3 class="peculiaritie-title">ПУНКТУАЛЬНОСТЬ</h3>
                 <p class="peculiaritie-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             
             <li class="item peculiarities-item ">
-                <h3 class="peculiaritie-title">Планирование</h3>
+                <h3 class="peculiaritie-title">ПЛАНИРОВАНИЕ</h3>
                 <p class="peculiaritie-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="item peculiarities-item ">
-            <h3 class="peculiaritie-title">Современные технологии</h3>
+            <h3 class="peculiaritie-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
             <p class="peculiaritie-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
