вносит правки к 2дз

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!--Чем мы занимаемся-->
      <section class="profiles">
         <h2 class="profiles-title">Чем мы занимаемся</h2>
-        <ul class="item profiles-list">
+        <ul class="list profiles-list">
             <li class="item profiles-item">
                 <img
                     src="./images/box1.jpg"
@@ -90,14 +90,12 @@
                     height="294" 
                 />
              </li>
-
-
     </ul>
     </section>
     <!--Наша команда-->
     <section class="command">
      <h2 class="command-title">Наша команда</h2>
-     <ul class="command-list">
+     <ul class=" list command-list">
          <li class="command-item">
             <img
              src="./images/employee1.jpg"
