--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,8 @@
 </header>
 <main>
     <!--Портфолио-->
-        <section class="portfolio"></section>
+        <section class="portfolio">
             <h1 class="visually-hidden">Портфолио</h1>
-            <div class="portfolio-battons">
                 <ul class="list portfolio-list">
                    <li class="portfolio-item"><button class="portfolio-btn"  type="button">Все</button></li>
                    <li class="portfolio-item"><button class="portfolio-btn"  type="button">Веб-сайты</button></li>
@@ -48,7 +47,6 @@
                    <li class="portfolio-item"><button class="portfolio-btn" type="button">Дизайн</button></li>
                    <li class="portfolio-item"><button class="portfolio-btn" type="button">Маркетинг</button></li>
                  </ul>  
-            </div>
               <ul class="list portfolio-list">
              <li class="portfolio-item">
                  <a class="link" href="">
